src/test/deca/syntax/parser/valid/simple_or.deca
{
    int x = 2;
    int y = 7;
    if (x < 3 || y > 5) {
        println("x est inférieur à 3 ou y est plus grand que 5");
    }
}