src/test/deca/syntax/parser/invalid/no_bracket_after_if.deca
// Missing {} after if

{
    int x = 5;
    if (x > 3)
        println("x est plus grand que 3");
}

//# output
